# pace-2024

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  task.cpp  task.h
heuristic/: CMakeLists.txt  main.cpp
scripts/: compare.py  heuristic_run.sh  heuristic_verify.sh  param_run.sh
src/: .clang-format  CMakeLists.txt
src/common/: assert.h  task.cpp  task.h
src/heuristic/: CMakeLists.txt  greedy.cpp  local.cpp  local.h  main.cpp
src/tree/: CMakeLists.txt  tree.cpp
